# DeefBot

./: .dockerignore  DeefBot.py  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
deefbot/: DeefBot.py
tests/: test_deefbot.py
